# src/schedule/schedule.controller.ts
@@ -3,7 +3,7 @@ import { Controller, Get, Post, Req, UseGuards } from '@nestjs/common';
 import { ScheduleService } from './schedule.service';
 import { ApiOkResponse, ApiOperation, ApiTags } from '@nestjs/swagger';
 import { ScheduleEntity } from './entities/schedule.entity';
-import { User } from '@prisma/client';
+import { Day, User } from '@prisma/client';
 
 @ApiTags('schedule')
 @Controller('schedule')
@@ -13,10 +13,13 @@ export class ScheduleController {
 
 	@Get()
 	@ApiOperation({ summary: 'Get all schedules for the current user' })
-	@ApiOkResponse({ type: ScheduleEntity })
+	@ApiOkResponse({ type: [ScheduleEntity] })
 	async getSchedules(
 		@Req() req: { user: User }
 	){
-		return this.service.getSchedule(req.user.id);
+		const daysOfWeek = Object.keys(Day);
+		return (await this.service.getSchedule(req.user.id)).sort((a, b) => {
+			return daysOfWeek.indexOf(a.day) - daysOfWeek.indexOf(b.day);
+		});
 	}
 }
